--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
 project(particle_fileter)
 
+set(CMAKE_BUILD_TYPE release)
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -O3 -s")
+
 add_compile_options(-std=c++11)
 
 find_package(OpenCV 3.3 REQUIRED)
